[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "edgegraph"
requires-python = ">= 3.8"
dependencies = []
readme = "README.md"
license = {file = "LICENSE.txt"}
description = "Object oriented edge-vertex graph library."
classifiers = [
	"Development Status :: 2 - Pre-Alpha",
]

[project.urls]
Homepage = "https://github.com/mishaturnbull/edgegraph"
Repository = "https://github.com/mishaturnbull/edgegraph"

[tool.setuptools.dynamic]
version = {attr = "edgegraph.version.__version__"}

# Pylint settings
[tool.pylint.main]
# 0 = automatically detect # of cores for multiprocessing
jobs = 0

[tool.pylint."messages control"]
# messages that we don't care about.  justify each entry!
disable = [
            # improves readability in some IDEs
            "trailing-newlines",

            # "explicit is better than implicit"  - the zen of Python
            # why is this even a warning??
            "useless-object-inheritance",

            # see https://github.com/pylint-dev/pylint/issues/8215
            # using ``from __future__ import annotations`` does not silence
            # pylint's undefined variable error -- because that is used all
            # over the place, everything goes to shite if this error isn't
            # silenced.  instead, i'll assume (hopefully) that such errors are
            # caught by unit testing.
            "undefined-variable",
           ]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-ra --durations=5"
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

